Major update: Add User Profile component